--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-twitter": "^2.1.1"
+    "hubot-twitter": "^2.1.1",
+    "cron": "^1.0.5"
   },
   "engines": {
     "node": "0.10.x"
