--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-twitter": "^2.1.1",
-    "cron": "^1.0.5"
+    "cron": "^1.0.5",
+    "time": "^0.11.0"
   },
   "engines": {
     "node": "0.10.x"
