--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-twitter-userstream": "0.0.3",
-    "kuromoji": "0.0.5",
-    "markov-chain-kuromoji": "^1.0.0",
-    "mecab-async": "^0.1.0",
+    "markov-chain-mecabapi": "^1.0.1",
     "moment": "^2.12.0",
     "time": "^0.11.0",
     "twit": "^2.2.3",
