:memo:  hubot_uraway

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hubot-uraway",
+  "name": "hubot_uraway",
   "version": "0.0.0",
   "private": true,
   "author": "uraway <masato.u0107@gmail.com>",
